# RTypeECS

./: BuildDocs.cmake  CMakeLists.txt  ComponentArray_8hpp_source.html  ComponentManager_8hpp_source.html  Coordinator_8hpp_source.html  EntityManager_8hpp_source.html  IComponentArray_8hpp_source.html  README.md  Singleton_8hpp_source.html  SystemManager_8hpp_source.html  System_8hpp_source.html  Types_8hpp_source.html  annotated.html  annotated_dup.js  classComponentArray-members.html  classComponentArray.html  classComponentArray.js  classComponentManager-members.html  classComponentManager.html  classComponentManager.js  classCoordinator-members.html  classCoordinator.html  classCoordinator.js  classEntityManager-members.html  classEntityManager.html  classEntityManager.js  classIComponentArray-members.html  classIComponentArray.html  classIComponentArray.js  classSingleton-members.html  classSingleton.html  classSingleton.js  classSystem-members.html  classSystem.html  classSystem.js  classSystemManager-members.html  classSystemManager.html  classSystemManager.js  classes.html  dir_2639b39b3f925c8a1f05aadccdf228ae.html  (+15 more)
.github/workflows/: main.yml
docs/: BuildDocs.cmake  Doxyfile.in
include/RTypeECS/: Coordinator.hpp  Types.hpp
include/RTypeECS/ComponentsArray/: ComponentArray.hpp  IComponentArray.hpp
include/RTypeECS/Managers/: ComponentManager.hpp  EntityManager.hpp  SystemManager.hpp
include/RTypeECS/Systems/: System.hpp
includes/: Component.hpp  Coordinator.hpp  ECSManager.hpp  Entity.hpp  Types.hpp
includes/Components/: PositionComponent.hpp
includes/ComponentsArray/: ComponentArray.hpp  IComponentArray.hpp
includes/Managers/: EntityManager.hpp  SystemManager.hpp
includes/Systems/: System.hpp
includes/components/: IComponentArray.hpp
includes/componentsArray/: ComponentArray.hpp
includes/managers/: ComponentManager.hpp  EntityManager.hpp  SystemManager.hpp
includes/systems/: System.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  searchdata.js
src/: main.cpp  other.cpp
src/Components/: PositionComponent.cpp
tests/: hello.cpp
